Attempt at fixing command pattern & added file io

--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
+    <Compile Include="ShapeIO.cs" />
     <Compile Include="ShapeSelector.cs" />
     <EmbeddedResource Include="Editor.resx">
       <DependentUpon>Editor.cs</DependentUpon>
