--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddEllipse.cs" />
+    <Compile Include="AddRectangle.cs" />
     <Compile Include="Rectangle.cs" />
     <Compile Include="Editor.cs">
       <SubType>Form</SubType>
