--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="AddEllipse.cs" />
     <Compile Include="AddRectangle.cs" />
+    <Compile Include="CompositeShape.cs" />
     <Compile Include="Rectangle.cs" />
     <Compile Include="Editor.cs">
       <SubType>Form</SubType>
@@ -58,6 +59,7 @@
     <Compile Include="Ellipse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AbstractShape.cs" />
     <Compile Include="Shape.cs" />
     <Compile Include="ShapeIO.cs" />
     <Compile Include="ShapeSelector.cs" />
