--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AddRectangle.cs" />
     <Compile Include="AddText.cs" />
     <Compile Include="CompositeShape.cs" />
+    <Compile Include="CompositShapeWithTitle.cs" />
     <Compile Include="Decorator.cs" />
     <Compile Include="IOVisitor.cs" />
     <Compile Include="MoveVisitor.cs" />
