--- a/Homework/Homework.csproj
+++ b/Homework/Homework.csproj
@@ -47,11 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddEllipse.cs" />
+    <Compile Include="AddGroup.cs" />
     <Compile Include="AddRectangle.cs" />
     <Compile Include="AddText.cs" />
     <Compile Include="CompositeShape.cs" />
-    <Compile Include="CompositShapeWithTitle.cs" />
-    <Compile Include="Decorator.cs" />
     <Compile Include="IOVisitor.cs" />
     <Compile Include="MoveVisitor.cs" />
     <Compile Include="Rectangle.cs" />
@@ -65,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AbstractShape.cs" />
+    <Compile Include="SelectVisitor.cs" />
     <Compile Include="Shape.cs" />
     <Compile Include="ShapeIO.cs" />
     <Compile Include="ShapeSelector.cs" />
